--- a/LuggageTrackerTool2/src/view/Luggage.form
+++ b/LuggageTrackerTool2/src/view/Luggage.form
@@ -49,11 +49,14 @@
         <Component class="javax.swing.JTable" name="LUGGAGE_TABLE">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="0">
-                <Column editable="false" title="Luggage ID" type="java.lang.Object"/>
-                <Column editable="false" title="Luggage Description" type="java.lang.Object"/>
+              <Table columnCount="7" rowCount="0">
+                <Column editable="false" title="ID" type="java.lang.Object"/>
+                <Column editable="false" title="Label Number" type="java.lang.Object"/>
+                <Column editable="false" title="Description" type="java.lang.Object"/>
                 <Column editable="false" title="Storage Location" type="java.lang.Object"/>
+                <Column editable="false" title="Status" type="java.lang.Object"/>
                 <Column editable="false" title="PassengerID" type="java.lang.Object"/>
+                <Column editable="false" title="Date Added" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -90,8 +93,8 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="LUGGAGE_TABLEMousePressed"/>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="LUGGAGE_TABLEMouseClicked"/>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="LUGGAGE_TABLEMousePressed"/>
           </Events>
         </Component>
       </SubComponents>
