--- a/LuggageTrackerTool2/src/view/RegistrationLuggage.form
+++ b/LuggageTrackerTool2/src/view/RegistrationLuggage.form
@@ -208,7 +208,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="LUGGAGEID_LABEL">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Luggage ID"/>
+        <Property name="text" type="java.lang.String" value="Label Number"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="LUGGAGEID_INPUT">
