--- a/LuggageTrackerTool2/src/view/EditPanel.form
+++ b/LuggageTrackerTool2/src/view/EditPanel.form
@@ -288,9 +288,9 @@
                           <Component id="TEMP_POSTAL_CODE" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="LUGGAGE_INFORMATION_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="PASSENGER_NO_LINK_LABEL" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="LUGGAGE_INFORMATION_LABEL" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
