--- a/LuggageTrackerTool2/src/view/EditPanel.form
+++ b/LuggageTrackerTool2/src/view/EditPanel.form
@@ -512,9 +512,9 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
-            <StringItem index="0" value="Opslag A"/>
-            <StringItem index="1" value="Opslag B"/>
-            <StringItem index="2" value="Opslag C"/>
+            <StringItem index="0" value="Storage A"/>
+            <StringItem index="1" value="Storage B"/>
+            <StringItem index="2" value="Storage C"/>
             <StringItem index="3" value="Other"/>
           </StringArray>
         </Property>
