--- a/LuggageTrackerTool2/src/view/ManagerMenu.form
+++ b/LuggageTrackerTool2/src/view/ManagerMenu.form
@@ -16,13 +16,198 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="TITLE" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="TEXT_LABEL" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="L_TOTAL_CHECK" min="-2" max="-2" attributes="0"/>
+                  <Component id="L_DESTROYED_CHECK" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                              <Component id="LUGGAGE_LABEL" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="L_FOUND_CHECK" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="L_MISSING_CHECK" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="L_RETURNED_CHECK" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="FIRST_DATE_LABEL" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="FIRST_DATE_INPUT" min="-2" pref="110" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="LAST_DATE_LABEL" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="LAST_DATE_INPUT" min="-2" pref="109" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="P_TOTAL_CHECK" min="-2" max="-2" attributes="0"/>
+                          <Component id="P_WITHOUT_LUGGAGE_CHECK" min="-2" max="-2" attributes="0"/>
+                          <Component id="P_WITH_LUGGAGE_CHECK" min="-2" max="-2" attributes="0"/>
+                          <Component id="PASSENGERS_LABEL" min="-2" max="-2" attributes="0"/>
+                          <Component id="FIRST_DATE_FORMAT" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="LAST_DATE_FORMAT" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="CONFIRM_BUTTON" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="TITLE" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="FIRST_DATE_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="FIRST_DATE_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="FIRST_DATE_FORMAT" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="LAST_DATE_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LAST_DATE_FORMAT" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="LAST_DATE_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="TEXT_LABEL" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="LUGGAGE_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PASSENGERS_LABEL" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="L_FOUND_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="P_WITH_LUGGAGE_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="L_MISSING_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="P_WITHOUT_LUGGAGE_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="L_RETURNED_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="P_TOTAL_CHECK" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="L_DESTROYED_CHECK" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="L_TOTAL_CHECK" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="CONFIRM_BUTTON" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JLabel" name="TITLE">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="18" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Graph Settings"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="FIRST_DATE_LABEL">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Firste date:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LAST_DATE_LABEL">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Last date:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JFormattedTextField" name="FIRST_DATE_INPUT">
+    </Component>
+    <Component class="javax.swing.JFormattedTextField" name="LAST_DATE_INPUT">
+    </Component>
+    <Component class="javax.swing.JLabel" name="FIRST_DATE_FORMAT">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="(YYYY-MM-DD)"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LAST_DATE_FORMAT">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="(YYYY-MM-DD)"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="TEXT_LABEL">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="What you want to see in the graph:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="L_FOUND_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Found"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="L_MISSING_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Missing"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="L_RETURNED_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Returned"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="L_DESTROYED_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Destroyed"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="L_TOTAL_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Total"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="L_TOTAL_CHECKActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LUGGAGE_LABEL">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Luggage:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="PASSENGERS_LABEL">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Passangers:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="P_WITH_LUGGAGE_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="With luggage"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="P_WITHOUT_LUGGAGE_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="without luggage"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JRadioButton" name="P_TOTAL_CHECK">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Total"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="CONFIRM_BUTTON">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Confirm"/>
+      </Properties>
+    </Component>
+  </SubComponents>
 </Form>
